--- a/razorqt-panel/plugin-geuzen-menu/geuzen-menu.qrc
+++ b/razorqt-panel/plugin-geuzen-menu/geuzen-menu.qrc
@@ -3,4 +3,7 @@
   <file alias="Listmenu.qml">qml/Listmenu.qml</file>
   <file alias="Gridmenu.qml">qml/Gridmenu.qml</file>
 </qresource>
+<qresource>
+  <file>geuzenmenu.png</file>
+</qresource>
 </RCC>
