push correct tag for submenus; submenu icon; misc cosmetic things

--- a/razorqt-panel/plugin-geuzen-menu/geuzen-menu.qrc
+++ b/razorqt-panel/plugin-geuzen-menu/geuzen-menu.qrc
@@ -6,4 +6,7 @@
 <qresource>
   <file>geuzenmenu.png</file>
 </qresource>
+<qresource prefix="/img">
+  <file alias="lines.png">images/lines.png</file>
+</qresource>
 </RCC>
