--- a/razorqt-panel/plugin-geuzen-menu/geuzen-menu.qrc
+++ b/razorqt-panel/plugin-geuzen-menu/geuzen-menu.qrc
@@ -8,5 +8,6 @@
 </qresource>
 <qresource prefix="/img">
   <file alias="lines.png">images/lines.png</file>
+  <file alias="less.png">images/less.png</file>
 </qresource>
 </RCC>
